plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.graalvm.buildtools.native' version '0.9.18'
}

group = 'com.lc'
version = '0.0.1-SNAPSHOT'
java.sourceCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.alibaba:fastjson:1.2.76'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'cn.hutool:hutool-core:5.8.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.gavaghan:geodesy:1.1.3'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
